<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 登录用户专属分组：未登录时整组隐藏 -->
    <group
        android:id="@+id/drawer_group_account"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/drawer_profile" />

        <item
            android:id="@+id/drawer_playlists"
            android:icon="@drawable/ic_playlist_play"
            android:title="@string/drawer_playlists" />

        <item
            android:id="@+id/drawer_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/drawer_favorites" />

        <item
            android:id="@+id/drawer_music_library"
            android:icon="@drawable/ic_cloud"
            android:title="@string/drawer_music_library" />
    </group>

    <!-- 通用功能：登录/未登录都可见 -->
    <group
        android:id="@+id/drawer_group_common"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_recent"
            android:icon="@drawable/ic_recent_play"
            android:title="@string/drawer_recent" />

        <item
            android:id="@+id/drawer_sleep"
            android:icon="@drawable/ic_sleep_timer"
            android:title="@string/drawer_sleep" />
    </group>

    <!-- 系统类 -->
    <group
        android:id="@+id/drawer_group_system"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />

        <!-- 仅登录后可见 -->
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/drawer_logout" />
    </group>
</menu>
