<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_play_next"
        android:icon="@drawable/ic_redo"
        android:title="@string/action_play_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_playing_queue"
        android:icon="@drawable/ic_playlist_add"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:icon="@drawable/ic_playlist_add"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/action_toggle_favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
