<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_details"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/action_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_current_local"
        android:icon="@drawable/ic_library_add"
        android:title="@string/add_current_local"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
